--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
     "express": "^4.10.8",
     "method-override": "^2.3.10",
     "morgan": "^1.9.0"
-  }
+  },
+  "engines": {
+    "node": "6.9.1",
+    "npm": "3.10.8"
+}
 }
